<resources>
    <string name="app_name">Youtube Clone</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="add">Add</string>
    <string name="subscriptions">Subscription</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notification">Noti</string>
    <string name="search">Search</string>
    <string name="Casting">Cast</string>
    <string name="todo">todo</string>
    <string name="youtube">YouTube</string>
    <string name="subscribe">Subscribe</string>
    <string name="create_a_short">Create a Short</string>
    <string name="upload_a_video">Upload a video</string>
    <string name="go_live">Go live</string>
    <string name="views">views</string>
    <string name="_9_2m_views">9.2M views</string>
    <string name="the_hooves_of_this_donkey_have_been_growing_for_6_years_and_it_walks_like">The hooves of this donkey have been growing for 6 years, and it walks like.</string>
    <string name="_243k">243k</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="remix">Remix</string>
    <string name="_12k">12K</string>
    <string name="the_technical_news">The Technical News</string>
    <string name="_2_month_ago">2 month ago</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
</resources>