<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_shorts"
        android:icon="@drawable/ic_short"
        android:title="@string/shorts" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/subscriptions" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/library" />

</menu>