<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/casting"
        android:icon="@drawable/ic_cast_device"
        android:title="@string/Casting"
        app:showAsAction="always"/>

    <item android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"
        app:showAsAction="always"/>

    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>